// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-34"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-38 MuiCheckbox-root makeStyles-style-35 makeStyles-style-37"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-41"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-42"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-43 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
            <div
              class="makeStyles-decorators-44"
            />
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-34"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-38 MuiCheckbox-root makeStyles-style-35 makeStyles-style-37"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-41"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-42"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-43 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
            <div
              class="makeStyles-decorators-44"
            />
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root Mui-focused"
      />
    </div>
  </div>
</body>
`;

exports[`should render a checkbox with help hint 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-78"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-82 MuiCheckbox-root makeStyles-style-79 makeStyles-style-81 PrivateSwitchBase-disabled-84 Mui-disabled makeStyles-disabled-80 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-85"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-86"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-87 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-88"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
              focusable="false"
              style="margin-left: 8px; font-size: 16px;"
              title=""
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
            </svg>
          </div>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-12"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-16 MuiCheckbox-root makeStyles-style-13 makeStyles-style-15 PrivateSwitchBase-disabled-18 Mui-disabled makeStyles-disabled-14 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-19"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-20"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-21 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-22"
          />
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly checkbox from widget properties 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-89"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-93 MuiCheckbox-root makeStyles-style-90 makeStyles-style-92 PrivateSwitchBase-disabled-95 Mui-disabled makeStyles-disabled-91 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-96"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-97"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-98 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-99"
          />
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-1"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root makeStyles-style-2 makeStyles-style-4"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-8"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-9"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-10 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-11"
          />
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-67"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-71 MuiCheckbox-root makeStyles-style-68 makeStyles-style-70"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-74"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-75"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-76 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
            <div
              class="makeStyles-decorators-77"
            />
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-56"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-60 MuiCheckbox-root makeStyles-style-57 makeStyles-style-59"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-63"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-64"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-65 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
            <div
              class="makeStyles-decorators-66"
            />
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-45"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-49 MuiCheckbox-root makeStyles-style-46 makeStyles-style-48"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-52"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-53"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-54 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
            <div
              class="makeStyles-decorators-55"
            />
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-23"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-27 MuiCheckbox-root makeStyles-style-24 makeStyles-style-26"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-30"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-31"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-32 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-33"
          />
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-23"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-27 MuiCheckbox-root makeStyles-style-24 makeStyles-style-26"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-30"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-31"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-32 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <div
            class="makeStyles-decorators-33"
          />
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root Mui-focused"
    />
  </div>
</div>
`;
